<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/container_heart"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:background="#D81B60">

            <ImageView
                android:id="@+id/image_heart"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_centerInParent="true"
                android:src="@drawable/heart"
                app:tint="@color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12sp"
            android:background="@drawable/bg_edit"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_activity"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/press_next_to_get_some_activities"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginStart="35sp"
            android:layout_marginBottom="30sp"
            android:text="@string/free"
            android:textColor="@color/background"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginStart="40sp"
            android:layout_marginBottom="10sp"
            android:text="@string/price"
            android:textColor="@color/background" />
        
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_btn"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:ignore="UsingOnClickInXml" />

<androidx.cardview.widget.CardView
    android:id="@+id/card_view_spinner"
    android:layout_width="150dp"
    android:layout_height="40dp"
    app:layout_constraintTop_toBottomOf="@+id/textSpinnerCategory"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="6dp"
    android:layout_marginStart="16dp"
    app:cardCornerRadius="8dp">

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_gravity="center|end"/>

</androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textSpinnerCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="40sp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_next" />

</androidx.constraintlayout.widget.ConstraintLayout>